--- a/res/style.css
+++ b/res/style.css
@@ -1,12 +1,18 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: rgb(20, 20, 20);
-    color: rgb(250, 250, 250);
+    background-color: greenyellow;
+    color: black;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
 }
 
 h1 {
     text-align: center;
+    padding-top: 2%;
     padding-bottom: 5%;
 }
 
